<resources>
    <string name="app_name">appevent</string>
    <string name="title_activity_main_fragment">AppEvento</string>
    <!-- Strings used for fragments for navigation -->
    <string name="menu_principal_label">Main Menu</string>
    <string name="second_fragment_label">organizer</string>
    <string name="next">events</string>
    <string name="next1">organizer</string>
    <string name="next2">eventsTypes</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eliminar_evento">Delete Events</string>
    />
    <string name="NomeEvento">Events</string>
    <string name="Organizador">Organizer</string>
    />
    <string name="tipoevento">TypesEvents</string>
    <string name="alterar">Change</string>
    <string name="eliminar">Delete </string>
    <string name="inserir">Insert</string>
    <string name="guardar" >Save</string>
    <string name="cancelar" >Cancel</string>
    <string name="action_settings" >Settings</string>
    <string name="eliminar_evento_label" >Delete Events</string>
    <string name="confirma_eliminar_evento" >Delete Events</string>
    <string name="evento_eliminado_sucesso" >Event delete with sucess</string>
    <string name="erro_eliminar_evento" >Error delete event</string>
    <string name="campo_obrigatorio" >Obrigatory</string>
    <string name="erro">error</string>
    <string name="done">Done</string>
    <string name="delete_organizador">Delete Organizer</string>
    <string name="sure">Are you sure?</string>
    <string name="delete" >Delete</string>
    <string name="insere_Organizador" >InserT Organizer</string>
    <string name="edit_Organizador" >Edit Organizer</string>
    <string name="delete_Organizador">Delete Organizer</string>
    <string name="insere_Evento">Insert Event</string>
    <string name="edit_Evento">Edit Event</string>
    <string name="delete_Evento">Delete Event</string>
    <string name="field_mandatory" >Field mandatory</string>


</resources>